--- a/login.css
+++ b/login.css
@@ -18,6 +18,8 @@ body {
   margin-top: 15px;
   background: rgba(255, 255, 255, 0.8);
   border-radius: 15px;
+  width: 500px;
+  padding: 10px;
 }
 
 #login_button {
