--- a/login.css
+++ b/login.css
@@ -18,7 +18,7 @@ body {
   margin-top: 15px;
   background: rgba(255, 255, 255, 0.8);
   border-radius: 15px;
-  width: 500px;
+  width: 500;
   padding: 10px;
 }
 
