--- a/room.css
+++ b/room.css
@@ -16,6 +16,11 @@ body {
   width: 80px;
 }
 
+.room_name {
+  cursor: pointer;
+  font-size: 20px;
+}
+
 #logout {
   font-size: 20px;
   float: right;
