--- a/CSS/chat.css
+++ b/CSS/chat.css
@@ -18,6 +18,15 @@ body {
 
 #back {
   font-size: 20px;
+  margin-right: 10px;
+  float: right;
+  margin-top: 0px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+}
+
+#logout {
+  font-size: 20px;
   float: right;
   margin-top: 0px;
   border-top-left-radius: 0px;
@@ -44,6 +53,6 @@ input {
   margin-bottom: 10px;
 }
 
-#send_container button{
+#send_container button {
   width: 180px;
 }
