--- a/CSS/room.css
+++ b/CSS/room.css
@@ -33,6 +33,15 @@ body {
   border-top-right-radius: 0px;
 }
 
+#notices {
+  font-size: 20px;
+  margin-right: 10px;
+  float: right;
+  margin-top: 0px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+}
+
 #name_display1 {
   color: white;
 }
