--- a/CSS/chat.css
+++ b/CSS/chat.css
@@ -56,3 +56,13 @@ input {
 #send_container button {
   width: 180px;
 }
+
+#contact {
+  font-size: 20px;
+  margin-right: 10px;
+  float: right;
+  margin-top: 0px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  color: black !important;
+}
